# app/Models/Post.php
@@ -1,0 +1,62 @@
+<?php
+
+namespace App\Models;
+
+use App\Models\User;
+use App\Models\Service;
+use App\Models\PostProposal;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class Post extends Model
+{
+    use HasFactory;
+
+    protected $table = 'posts';
+    protected $fillable = [
+        'client_id',
+        'professional_id',
+        'service_id',
+        'category_id',
+        'title',
+        'description',
+        'job'
+    ];
+
+    /**
+     * Get the service that owns the Post
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     */
+    public function service(): BelongsTo
+    {
+        return $this->belongsTo(Service::class, 'service_id');
+    }
+
+    public function category(): BelongsTo
+    {
+        return $this->belongsTo(Category::class, 'category_id');
+    }
+
+    public function client(): BelongsTo
+    {
+        return $this->belongsTo(User::class, 'client_id');
+    }
+
+    public function professional(): BelongsTo
+    {
+        return $this->belongsTo(User::class, 'professional_id');
+    }
+
+    /**
+     * Get all of the proposals for the Post
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\HasMany
+     */
+    public function proposals(): HasMany
+    {
+        return $this->hasMany(PostProposal::class, 'post_id');
+    }
+}
