# routes/api.php
@@ -1,6 +1,8 @@
 <?php
 
+use App\Helpers\Constant;
 use App\Http\Controllers\Api\Auth\AuthController;
+use App\Http\Controllers\Api\Client\PostsController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -15,6 +17,7 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+// Auth Routes
 Route::controller(AuthController::class)->group(function () {
     Route::post('check_username', 'checkUsername');
     Route::post('check_mobile_number', 'checkMobileNumber');
@@ -24,8 +27,26 @@ Route::controller(AuthController::class)->group(function () {
     Route::post('register', 'register');
     Route::post('login', 'login');
 });
+
+// Image Upload
+Route::controller(AuthController::class)->group(function () {
+    Route::post('upload_image', 'uploadImage');
+});
+
 Route::middleware('auth:sanctum')->group(function () {
-    Route::controller(AuthController::class)->group(function () {
-        Route::post('upload_image', 'uploadImage');
+    // Client Routes
+    Route::prefix(Constant::CLIENT)->group(function () {
+        Route::controller(PostsController::class)->group(function () {
+            Route::post('save/post', 'store');
+        });
     });
+
+    // Professional Routes
+    Route::prefix(Constant::PROFESSIONAL)->group(function () {
+        Route::controller(PostsController::class)->group(function () {
+            Route::post('post/proposal', 'proposal');
+        });
+    });
+    // All Posts
+    Route::get('posts', [PostsController::class, 'index']);
 });
